# competitive-programming

./: .gitignore
CodeForces/: 1213B.cpp  1214C.cpp  1214C_extra.txt
HackerEarth/: maximum_intervals_overlap.cpp
HackerRank/: balanced_brackets.cpp  euler001.cpp  euler002.cpp  euler003.cpp  euler005.cpp  euler007.cpp  euler010.cpp  maximum_element.cpp
Kattis/: adj.py  apples.cpp  apples_test.txt  birds.hs  deadfraction.cpp  deadfraction.py  deadfraction2.py  deadfraction_test.txt  deadfraction_tester.py  different.py  easiest.hs  font.cpp  font.py  force.py  forceforce.py  forcetest.sh  fruitbaskets.py  fruitbaskets_test.txt  fruitbaskets_test2.txt  fruitbaskets_test3.txt  helloworld.cpp  iwannabe.py  keystrokes.cpp  modulararithmetic.py  orderlyclass.cpp  orderlyclass_inputgen.py  output.txt  pyproject.toml  quadrant.hs  r2.cpp  seqman.py  sequentialmanufacturing.cpp  sequentialmanufacturing.txt  sequentialmanufacturing2.cpp  sequentialmanufacturing_examples.sh  sequentialmanufacturing_test1.txt  test.txt  thanos.cpp  thanos.py  thanos_compare.py  (+9 more)
Kattis/.vim/: coc-settings.json
OnlineJudge/: 10176.cpp  10226.cpp  10945.cpp  10954.cpp  10954.py  11547.cpp  11764.cpp  11849.cpp  11879.cpp  12150.cpp  12150_input.txt  156.cpp  156.py  272.c  374.cpp  543.cpp  pyproject.toml
