[tool.poetry]
name = "kattis"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = {version = "^5.7.0", allow-prereleases = true}
black = {version = "^20.8b1", allow-prereleases = true}
pynvim = {version = "^0.4.3", allow-prereleases = true}
pylint = {version = "^2.7.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
